# -proofmode

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: proofmode-pr.yml
backend/: pyproject.toml  requirements.txt
backend/app/: cli.py  database.py  main.py
backend/app/routers/: artifacts.py  claims.py  demo.py  projects.py  runs.py  settings.py
backend/app/schemas/: claims.py  projects.py  runs.py  settings.py
backend/app/services/: artifacts.py  claim_ingestion_service.py  claim_store.py  demo_seed.py  diff_analysis.py  evidence_bundle.py  evidence_evaluator.py  git_diff_context.py  llm_planner.py  llm_provider.py  planner.py  project_service.py  project_store.py  report_generator.py  risk_assessor.py  run_service.py  run_store.py  self_report_comparator.py  settings_status.py  timeline.py
backend/app/verifiers/: api_verifier.py  db_verifier.py  diff_verifier.py  test_command_verifier.py  ui_verifier.py
backend/tests/: test_cli.py  test_planner.py  test_runs.py
backend/tests/fixtures/: ui_smoke.html
docs/: CHECKPOINTS.md  NEXT_CHECKPOINTS.md  PROJECT_BRIEF.md  REAL_PROJECT_TEST_PLAN.md  ROADMAP.md  USING_PROOFMODE.md
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: styles.css
frontend/src/components/: MarkdownReport.tsx  RunCard.tsx  RunDetail.tsx
frontend/src/pages/: App.tsx
frontend/src/services/: proofmodeApi.ts
frontend/src/types/: claims.ts  projects.ts  runs.ts  settings.ts
