[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "proofmode"
version = "0.1.0"
description = "Agent-agnostic verification layer for AI coding claims."
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.115.6",
  "uvicorn[standard]==0.34.0",
  "pydantic==2.10.4",
  "httpx==0.28.1",
  "SQLAlchemy==2.0.36",
  "playwright==1.49.1",
]

[project.scripts]
proofmode = "app.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
